--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   type="radio"
                   name="plotter"
                   id="plotter2"
-                  value="1.2"
+                  value="2"
                 />
                 <label class="form-check-label" for="plotter2"> 2 цвета </label>
               </div>
@@ -194,7 +194,7 @@
           <div class="col-4 eyelets">
             <div class="form-group">
               <label>Люверсы</label>
-              <input type="text" class="form-control" name="eyelets" />
+              <input type="number" class="form-control" name="eyelets" />
             </div>
           </div>
           <div class="col-4 thikness">
@@ -210,9 +210,34 @@
               <label>Количество</label>
               <input type="number" class="form-control" name="count" />
             </div>
-            <button class="btn btn-primary" type="button" id="countBtn">
-              Рассчитать
-            </button>
+            <div class="d-flex align-items-center">
+              <button class="btn btn-primary" type="button" id="countBtn">
+                Рассчитать
+              </button>
+              <small class="text-muted ml-5" id="result"></small>
+            </div>
+            
+
+          </div>
+          <div class="col-4 substrate-width">
+            <div class="form-group mb-0 mr-3">
+              <label>Ширина подложки</label>
+              <input
+                type="number"
+                class="form-control"
+                name="substrate-width"
+              />
+            </div>
+          </div>
+          <div class="col-4 substrate-height">
+            <div class="form-group mb-0">
+              <label>Высота подложки</label>
+              <input
+                type="number"
+                class="form-control"
+                name="substrate-height"
+              />
+            </div>
           </div>
         </div>
       </form>
@@ -235,6 +260,8 @@
         "count",
         "frame",
         "substrate",
+        "substrate-width",
+        "substrate-height",
       ];
 
       const fieldNodes = {};
@@ -257,7 +284,9 @@
           setCategories([]);
           clearFields();
           showFields(Object.keys(currentType.fields));
+          clearFields(["substrate-width", "substrate-height"]);
         }
+        result.innerHTML = ``;
       };
 
       let onCategoryClick = ({ target }) => {
@@ -268,6 +297,7 @@
         categoryNode.classList.add("active");
         clearFields();
         showFields(Object.keys(currentCategory.fields));
+        result.innerHTML = ``;
       };
 
       let onCountButtonClick = () => {
@@ -276,11 +306,23 @@
             currentType.fields ? currentType.fields : currentCategory.fields
           )
         );
+        const sum = getSum(value);
+        result.innerHTML = `Итого: ${sum.toFixed(2)} руб.`;
+      };
 
-        console.log(value);
+      let onSubstrateChange = ({ target: { checked } }) => {
+        if (checked) {
+          showFields(["substrate-width", "substrate-height"]);
+        } else {
+          clearFields(["substrate-width", "substrate-height"]);
+        }
       };
 
       countBtn.addEventListener("click", onCountButtonClick);
+      document.forms[0].elements.substrate.addEventListener(
+        "change",
+        onSubstrateChange
+      );
 
       document.querySelectorAll("[data-type]").forEach((node, index) => {
         node.addEventListener("click", onTypeClick);
@@ -295,8 +337,8 @@
         });
       }
 
-      function clearFields() {
-        Object.keys(fieldNodes).forEach((key) => {
+      function clearFields(fields = Object.keys(fieldNodes)) {
+        fields.forEach((key) => {
           fieldNodes[key].classList.remove("d-block");
           fieldNodes[key].classList.add("d-none");
         });
@@ -310,9 +352,9 @@
             if (key === "thikness") {
               const select = fieldNodes[key].querySelector("select");
               select.innerHTML = "";
-              currentCategory.fields.thikness.forEach((th) => {
+              currentCategory.fields.thikness.forEach((th, index) => {
                 const opt = document.createElement("option");
-                opt.value = th;
+                opt.value = index;
                 opt.textContent = `${th} мм`;
                 select.append(opt);
               });
@@ -326,10 +368,112 @@
         fields.forEach((field) => {
           const elem = document.forms[0].elements[field];
           if (elem) {
-            value[field] = elem.type === 'checkbox' ? elem.checked : elem.value;
+            value[field] = elem.type === "checkbox" ? elem.checked : elem.value;
           }
         });
         return value;
+      }
+
+      function getSum(value) {
+        let sum = 0;
+        let square = 0;
+        let perimeter = 0;
+
+        if (currentType.isLetters) {
+          return getLettersSum(value);
+        }
+
+        if (value.width && value.height) {
+          const width = value.width / 1000;
+          const height = value.height / 1000;
+          square = width * height;
+          perimeter = width * 2 + height * 2;
+          sum =
+            square *
+            (currentType.children ? currentCategory.price : currentType.price);
+        }
+        if (value.quality) {
+          sum *= value.quality;
+        }
+        if (value.plotter) {
+          sum +=
+            currentCategory.fields.plotter.values[+value.plotter - 1].price *
+            square;
+        }
+        if (value.flexy) {
+          sum *= value.flexy;
+        }
+        if (value.lamination) {
+          sum *= currentCategory.fields.lamination.koef;
+        }
+        if (value.perimeterCut) {
+          sum += perimeter * currentCategory.fields.perimeterCut.price;
+        }
+        if (value.thikness) {
+          sum += currentCategory.price * value.thikness + 1;
+        }
+        if (value.perimeterBonding) {
+          sum += perimeter * currentCategory.fields.perimeterBonding.price;
+        }
+        if (value.eyelets) {
+          sum +=
+            Math.ceil(perimeter / value.eyelets + 1) *
+            currentCategory.fields.eyelets.price;
+        }
+
+        if (value.count) {
+          const count = +value.count;
+          sum *= value.count;
+          if (count < 21 && count > 10) {
+            sum *= 0.98;
+          }
+          if (count < 31 && count > 20) {
+            sum *= 0.95;
+          }
+          if (count > 30) {
+            sum *= 0.93;
+          }
+        }
+        return sum;
+      }
+
+      function getLettersSum(value) {
+        let sum = 0;
+        if (value.height) {
+          value.height = +value.height;
+          if (value.height > 49 && value.height < 151) {
+            sum = (value.height / 10) * 150;
+          }
+          if (value.height > 150 && value.height < 401) {
+            sum = (value.height / 10) * 80;
+          }
+          if (value.height > 400 && value.height < 501) {
+            sum = (value.height / 10) * 100;
+          }
+        }
+        if (value.count) {
+          sum *= value.count;
+        }
+        if (value.frame) {
+          const count = +value.count;
+          if (count < 7) {
+            sum += 2 * currentType.fields.frame.price;
+          }
+          if (count > 6 && count < 15) {
+            sum += 4 * currentType.fields.frame.price;
+          }
+          if (count > 14 && count < 22) {
+            sum += 6 * currentType.fields.frame.price;
+          }
+        }
+        if (value.substrate) {
+          const square =
+            (value["substrate-width"] / 1000) *
+            (value["substrate-height"] / 1000);
+          sum += square * currentType.fields.substrate.price;
+        }
+
+        return sum;
       }
 
       function setCategories(categories) {
